--- a/TODO.org
+++ b/TODO.org
@@ -1,11 +1,23 @@
 
 * Content fixes
 
-** TODO Make the favicon work
+** DONE Make the favicon work
+CLOSED: [2019-12-05 Thu 13:00]
+:LOGBOOK:
+- State "DONE"       from "WAITING"    [2019-12-05 Thu 13:00]
+- State "WAITING"    from "TODO"       [2019-12-05 Thu 13:00]
+:END:
 
 This should teach me about how to make static content work
 
-** TODO Convert ~~~MORE~~~ back to ~<!--more-->~
+Yeah, just move it to "static" and it does work.
+
+** DONE Convert ~~~MORE~~~ back to ~<!--more-->~
+CLOSED: [2019-12-05 Thu 13:00]
+:LOGBOOK:
+- State "DONE"       from "WAITING"    [2019-12-05 Thu 13:00]
+- State "WAITING"    from "TODO"       [2019-12-05 Thu 13:00]
+:END:
 
 ** TODO Fix ~post_url~ references
 
