Committed automatically at 2019-12-05

--- a/TODO.org
+++ b/TODO.org
@@ -19,7 +19,12 @@ CLOSED: [2019-12-05 Thu 13:00]
 - State "WAITING"    from "TODO"       [2019-12-05 Thu 13:00]
 :END:
 
-** TODO Fix ~post_url~ references
+** DONE Fix ~post_url~ references
+CLOSED: [2019-12-05 Thu 13:39]
+:LOGBOOK:
+- State "DONE"       from "WAITING"    [2019-12-05 Thu 13:39]
+- State "WAITING"    from "TODO"       [2019-12-05 Thu 13:39]
+:END:
 
 ** TODO Fix images
 
